--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
+    "@mui/styles": "^5.2.3",
     "next": "12.0.10",
     "notistack": "^2.0.3",
     "react": "17.0.2",
