--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.2.3",
+    "@mui/x-data-grid": "^5.5.0",
     "next": "12.0.10",
     "notistack": "^2.0.3",
     "react": "17.0.2",
