--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
-    "react-query": "^3.34.14"
+    "react-query": "^3.34.14",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
