--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
+    "@solana/wallet-adapter-base": "^0.9.4",
+    "@solana/wallet-adapter-material-ui": "^0.16.4",
+    "@solana/wallet-adapter-react": "^0.15.3",
+    "@solana/wallet-adapter-wallets": "^0.15.5",
+    "@solana/web3.js": "^1.36.0",
     "next": "12.0.10",
     "notistack": "^2.0.3",
     "react": "17.0.2",
