--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
     "@project-serum/anchor": "^0.22.1",
+    "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.4",
     "@solana/wallet-adapter-material-ui": "^0.16.4",
