--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@solana/wallet-adapter-base": "^0.9.4",
     "@solana/wallet-adapter-material-ui": "^0.16.4",
     "@solana/wallet-adapter-react": "^0.15.3",
+    "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.15.5",
     "@solana/web3.js": "^1.36.0",
     "next": "12.0.10",
@@ -30,17 +31,21 @@
     "react": "17.0.2",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
+    "react-hook-form": "^7.31.1",
     "react-query": "^3.34.14",
-    "recharts": "^2.1.9"
+    "recharts": "2.1.2",
+    "recoil": "^0.7.3-alpha.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "17.0.17",
     "@types/react": "17.0.39",
+    "@types/react-dom": "^18.0.2",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "numbro": "^2.3.2",
     "prettier": "^2.5.1",
     "typescript": "4.5.5"
   }
