--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "@solana/wallet-adapter-react-ui": "^0.9.6",
     "@solana/wallet-adapter-wallets": "^0.15.5",
     "@solana/web3.js": "^1.36.0",
+    "@types/react-copy-to-clipboard": "^5.0.2",
+    "animate.css": "^4.1.1",
     "next": "12.0.10",
     "notistack": "^2.0.3",
     "react": "17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.1.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.31.1",
