--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@solana/web3.js": "^1.36.0",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "animate.css": "^4.1.1",
+    "dayjs": "^1.11.0",
     "next": "12.0.10",
     "notistack": "^2.0.3",
+    "polished": "^4.2.2",
     "react": "17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.1.2",
