--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "animate.css": "^4.1.1",
     "dayjs": "^1.11.0",
     "incept-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Incept-Protocol/incept-protocol.git#sdk-update",
-    "next": "12.0.10",
+    "next": "12.1.0",
     "notistack": "^2.0.3",
     "polished": "^4.2.2",
     "react": "17.0.2",
@@ -44,15 +44,21 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
-    "@types/node": "17.0.17",
+    "@types/lodash.throttle": "^4.1.7",
+    "@types/node": "17.0.19",
     "@types/react": "17.0.39",
     "@types/react-dom": "^18.0.2",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
+    "chai": "^4.3.6",
+    "eslint": "8.9.0",
+    "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "numbro": "^2.3.2",
     "prettier": "^2.5.1",
+    "ts-loader": "^9.3.1",
     "typescript": "4.5.5"
+  },
+  "resolutions": {
+    "@types/react": "17.0.39"
   }
 }
