--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "lint-front": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -54,6 +61,8 @@
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^11.1.4",
     "numbro": "^2.3.2",
     "prettier": "^2.5.1",
     "ts-loader": "^9.3.1",
