--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
-  "plugins": ["prettier"],
-  "extends": ["next/core-web-vitals", "eslint:recommended", "plugin:prettier/recommended"],
-  "rules": {
-    "prettier/prettier": "error"
-  }
+  "extends": [
+    "next",
+    "prettier"
+  ]
 }
