--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "incept-front-webapp",
+  "version": "0.1.0",
   "engines": {
     "node": ">= 14.18.1"
   },
@@ -20,12 +21,11 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/almarai": "^4.5.8",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
-    "@project-serum/anchor": "^0.22.1",
+    "@coral-xyz/anchor": "^0.27.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.4",
@@ -36,30 +36,35 @@
     "@solana/web3.js": "^1.36.0",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "animate.css": "^4.1.1",
+    "axios": "^1.3.4",
     "dayjs": "^1.11.0",
-    "incept-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Incept-Protocol/incept-protocol.git#private-beta",
-    "next": "12.1.0",
+    "incept-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Incept-Protocol/incept-protocol.git#public-beta",
+    "moment": "^2.29.4",
+    "next": "^12.1.0",
     "notistack": "^2.0.3",
     "polished": "^4.2.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-device-detect": "^2.1.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.1",
     "react-query": "^3.34.14",
-    "recharts": "2.1.2",
-    "recoil": "^0.7.3-alpha.2"
+    "recharts": "^2.4.2",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
     "@types/lodash.throttle": "^4.1.7",
-    "@types/node": "17.0.19",
-    "@types/react": "17.0.39",
+    "@types/node": "^17.0.19",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^18.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.3.6",
     "eslint": "8.9.0",
-    "eslint-config-next": "12.1.0",
+    "eslint-config-next": "^12.1.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.2",
     "lint-staged": "^11.1.4",
@@ -69,6 +74,12 @@
     "typescript": "4.5.5"
   },
   "resolutions": {
-    "@types/react": "17.0.39"
+    "@types/react": "^17.0.39"
+  },
+  "browser": {
+    "child_process": false,
+    "fs": false,
+    "net": false,
+    "tls": false
   }
 }
