--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
     "dayjs": "^1.11.0",
+    "google-spreadsheet": "^3.3.0",
     "incept-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Incept-Protocol/incept-protocol.git#public-beta",
     "moment": "^2.29.4",
     "next": "^12.1.0",
@@ -54,6 +55,7 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
+    "@types/google-spreadsheet": "^3.3.1",
     "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^17.0.19",
     "@types/react": "^17.0.39",
