--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     ]
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.27.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
-    "@coral-xyz/anchor": "^0.27.0",
+    "@next/bundle-analyzer": "^13.4.6",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.4",
