--- a/.babelrc
+++ b/.babelrc
@@ -10,5 +10,25 @@
             }
         ]
     ],
-    "plugins": ["@emotion/babel-plugin"]
+    "plugins": [
+        "@emotion/babel-plugin",
+        [
+            "babel-plugin-import",
+            {
+                "libraryName": "@mui/material",
+                "libraryDirectory": "",
+                "camel2DashComponentName": false,
+            },
+            "core"
+        ],
+        [
+            "babel-plugin-import",
+            {
+                "libraryName": "@mui/icons-material",
+                "libraryDirectory": "",
+                "camel2DashComponentName": false,
+            },
+            "icons"
+        ],
+    ]
 }
