--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/react-dom": "^18.0.2",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.6",
     "chai": "^4.3.6",
     "eslint": "8.9.0",
     "eslint-config-next": "^12.1.0",
