--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     ]
   },
   "dependencies": {
+    "@coral-xyz/anchor": "^0.27.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.4.1",
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
-    "@coral-xyz/anchor": "^0.27.0",
+    "@pythnetwork/client": "^2.17.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.4",
@@ -39,7 +40,7 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.0",
     "google-spreadsheet": "^3.3.0",
-    "incept-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Incept-Protocol/incept-protocol.git#public-beta",
+    "incept-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Incept-Protocol/incept-protocol.git#core-547",
     "moment": "^2.29.4",
     "next": "^12.1.0",
     "notistack": "^2.0.3",
