--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
     "@next/bundle-analyzer": "^13.4.6",
+    "@pythnetwork/client": "^2.17.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.4",
@@ -40,7 +41,7 @@
     "axios": "^1.3.4",
     "dayjs": "^1.11.0",
     "google-spreadsheet": "^3.3.0",
-    "incept-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Incept-Protocol/incept-protocol.git#public-beta",
+    "incept-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Incept-Protocol/incept-protocol.git#core-547",
     "moment": "^2.29.4",
     "next": "^12.1.0",
     "notistack": "^2.0.3",
@@ -66,7 +67,7 @@
     "babel-plugin-import": "^1.13.6",
     "chai": "^4.3.6",
     "eslint": "8.9.0",
-    "eslint-config-next": "^12.1.0",
+    "eslint-config-next": "^12.0.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^4.0.0",
