--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
+    "@netlify/functions": "^1.6.0",
     "@next/bundle-analyzer": "^13.4.6",
     "@pythnetwork/client": "^2.17.0",
     "@solana/buffer-layout": "^4.0.0",
@@ -59,7 +60,7 @@
     "@emotion/babel-plugin": "^11.7.2",
     "@types/google-spreadsheet": "^3.3.1",
     "@types/lodash.throttle": "^4.1.7",
-    "@types/node": "^17.0.19",
+    "@types/node": "^14.18.52",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^18.0.2",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
@@ -76,7 +77,7 @@
     "numbro": "^2.3.2",
     "prettier": "^2.5.1",
     "ts-loader": "^9.3.1",
-    "typescript": "4.5.5"
+    "typescript": "^4.9.5"
   },
   "resolutions": {
     "@types/react": "^17.0.39"
