--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "incept-front-webapp",
+  "name": "clone-markets-app",
   "version": "0.1.0",
   "engines": {
     "node": ">= 14.18.1"
@@ -55,8 +55,6 @@
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
-    "@types/google-spreadsheet": "^3.3.1",
-    "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^14.18.52",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^18.0.2",
