--- a/package.json
+++ b/package.json
@@ -39,9 +39,10 @@
     "@types/react-copy-to-clipboard": "^5.0.2",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
+    "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#public-beta",
     "dayjs": "^1.11.0",
     "google-spreadsheet": "^3.3.0",
-    "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#public-beta",
+    "jotai": "^2.2.2",
     "next": "^12.1.0",
     "notistack": "^2.0.3",
     "polished": "^4.2.2",
