--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.31.1",
     "react-query": "^3.34.14",
-    "recharts": "^2.4.2",
-    "recoil": "^0.7.6"
+    "recharts": "^2.4.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
