--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@types/react-copy-to-clipboard": "^5.0.2",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
-    "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#public-beta",
+    "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#develop",
     "dayjs": "^1.11.0",
     "google-spreadsheet": "^3.3.0",
     "jotai": "^2.2.2",
@@ -76,7 +76,7 @@
     "typescript": "^4.9.5"
   },
   "resolutions": {
-    "@types/react": "^17.0.39"
+    "@types/react": "^18.2.0"
   },
   "browser": {
     "child_process": false,
