--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
     "@netlify/functions": "^1.6.0",
+    "@netlify/plugin-nextjs": "4.36.1",
     "@next/bundle-analyzer": "^13.4.6",
     "@pythnetwork/client": "^2.17.0",
     "@solana/buffer-layout": "^4.0.0",
@@ -45,7 +46,7 @@
     "dayjs": "^1.11.0",
     "google-spreadsheet": "^3.3.0",
     "jotai": "^2.2.2",
-    "next": "^13.4.10",
+    "next": "13.3.1",
     "notistack": "^2.0.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
