--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
     "@netlify/functions": "^1.6.0",
+    "@netlify/plugin-nextjs": "4.36.1",
     "@next/bundle-analyzer": "^13.4.6",
     "@pythnetwork/client": "^2.17.0",
     "@solana/buffer-layout": "^4.0.0",
@@ -41,11 +42,10 @@
     "@types/react-copy-to-clipboard": "^5.0.2",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
-    "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#public-beta",
+    "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#develop",
     "dayjs": "^1.11.0",
-    "google-spreadsheet": "^3.3.0",
     "jotai": "^2.2.2",
-    "next": "^13.4.10",
+    "next": "13.3.1",
     "notistack": "^2.0.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
@@ -76,7 +76,7 @@
     "typescript": "^4.9.5"
   },
   "resolutions": {
-    "@types/react": "^17.0.39"
+    "@types/react": "^18.2.0"
   },
   "browser": {
     "child_process": false,
