--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.31.1",
     "recharts": "^2.4.2"
