--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.32.0",
     "@types/react-copy-to-clipboard": "^5.0.2",
+    "@web3auth/modal": "^7.1.1",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
     "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#develop",
