--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,11 @@
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-  
+
 [functions]
     directory = "functions/"
+
+[build.environment]
+  NEXT_USE_NETLIFY_EDGE = "true"
 
 [build]
     publish = ".next"
