--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "clone-markets-app",
   "version": "0.1.0",
   "engines": {
-    "node": ">= 14.18.1"
+    "node": ">= 18.18.1"
   },
   "private": true,
   "scripts": {
@@ -26,10 +26,11 @@
     "@mui/material": "^5.4.1",
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.5.0",
+    "@netlify/edge-functions": "^2.2.0",
     "@netlify/functions": "^1.6.0",
-    "@netlify/plugin-nextjs": "4.36.1",
+    "@netlify/plugin-nextjs": "4.41.2",
     "@next/bundle-analyzer": "^13.4.6",
-    "@pythnetwork/client": "^2.17.0",
+    "@pythnetwork/client": "^2.19.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.4",
@@ -42,10 +43,10 @@
     "@types/react-copy-to-clipboard": "^5.0.2",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
-    "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#develop",
+    "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#bb7d35e",
     "dayjs": "^1.11.0",
     "jotai": "^2.2.2",
-    "next": "13.3.1",
+    "next": "13.3.4",
     "notistack": "^2.0.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
@@ -65,7 +66,7 @@
     "babel-plugin-import": "^1.13.6",
     "chai": "^4.3.6",
     "eslint": "8.9.0",
-    "eslint-config-next": "^13.4.10",
+    "eslint-config-next": "^13.4.12",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^4.0.0",
