--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.27.0",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.4.1",
-    "@mui/material": "^5.4.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.9",
+    "@mui/material": "^5.14.10",
     "@mui/styles": "^5.2.3",
-    "@mui/x-data-grid": "^5.5.0",
+    "@mui/x-data-grid": "^6.18.0",
     "@netlify/edge-functions": "^2.2.0",
     "@netlify/functions": "^1.6.0",
     "@netlify/plugin-nextjs": "4.41.2",
@@ -46,7 +46,7 @@
     "clone-protocol-sdk": "git+https://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:x-oauth-basic@github.com/Clone-Protocol/clone-protocol.git#bb7d35e",
     "dayjs": "^1.11.0",
     "jotai": "^2.2.2",
-    "next": "13.3.4",
+    "next": "^14.0.4",
     "notistack": "^2.0.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
@@ -59,21 +59,21 @@
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "^14.18.52",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.6",
     "chai": "^4.3.6",
-    "eslint": "8.9.0",
-    "eslint-config-next": "^13.4.12",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.45.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-babel": "^5.3.1",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.2",
-    "lint-staged": "^11.1.4",
+    "lint-staged": "^12.5.0",
     "numbro": "^2.3.2",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.8",
     "ts-loader": "^9.3.1",
     "typescript": "^4.9.5"
   },
