--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,13 @@
 {
     "presets": [
         [
-            "next/babel",
-            {
-                "preset-react": {
-                    "runtime": "automatic",
-                    "importSource": "@emotion/react"
-                }
-            }
+            "next/babel"
+            // {
+            //     "preset-react": {
+            //         "runtime": "automatic",
+            //         "importSource": "@emotion/react"
+            //     }
+            // }
         ]
     ],
     "plugins": [
