--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
     "clone-protocol-sdk": "git+https://github.com/Clone-Protocol/clone-protocol.git#develop",
+    "cross-fetch": "^4.0.0",
     "dayjs": "^1.11.0",
+    "fetch-retry": "^5.0.6",
     "jotai": "^2.2.2",
     "next": "^14.0.4",
     "notistack": "^3.0.1",
