--- a/package.json
+++ b/package.json
@@ -57,13 +57,15 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.31.1",
-    "recharts": "^2.4.2"
+    "recharts": "^2.4.2",
+    "safe-json-stringify": "^1.2.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "^14.18.52",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/safe-json-stringify": "^1.1.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "babel-eslint": "^10.1.0",
     "babel-plugin-import": "^1.13.6",
