--- a/package.json
+++ b/package.json
@@ -34,14 +34,13 @@
     "@sentry/nextjs": "^7.91.0",
     "@solana/buffer-layout": "^4.0.0",
     "@solana/spl-token": "^0.2.0",
-    "@solana/wallet-adapter-base": "^0.9.4",
-    "@solana/wallet-adapter-react": "^0.15.3",
-    "@solana/wallet-adapter-wallets": "^0.15.5",
-    "@solana/web3.js": "^1.36.0",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-wallets": "0.19.24",
+    "@solana/web3.js": "^1.90.1",
     "@supabase/supabase-js": "^2.26.0",
     "@tanstack/react-query": "^4.32.0",
     "@tanstack/react-query-devtools": "^4.32.0",
-    "@types/react-copy-to-clipboard": "^5.0.2",
     "animate.css": "^4.1.1",
     "axios": "^1.3.4",
     "clone-protocol-sdk": "git+https://github.com/Clone-Protocol/clone-protocol.git#develop",
@@ -64,6 +63,7 @@
     "@emotion/babel-plugin": "^11.7.2",
     "@types/node": "^14.18.52",
     "@types/react": "^18.2.45",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@types/react-dom": "^18.2.18",
     "@types/safe-json-stringify": "^1.1.5",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
