--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.31.1",
+    "react-otp-input": "^3.1.1",
     "recharts": "^2.4.2",
     "safe-json-stringify": "^1.2.0"
   },
