--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@coral-xyz/anchor": "^0.27.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@ledgerhq/hw-transport-node-hid": "^6.29.1",
     "@mui/icons-material": "^5.14.9",
     "@mui/material": "^5.15.0",
     "@mui/styles": "^5.2.3",
@@ -80,8 +81,8 @@
     "husky": "^8.0.2",
     "lint-staged": "^12.5.0",
     "numbro": "^2.3.2",
-    "rpc-websockets": "7.0.0",
     "prettier": "^2.8.8",
+    "rpc-websockets": "7.0.0",
     "ts-loader": "^9.3.1",
     "typescript": "^5.3.3"
   },
